--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,27 @@ html{
 #frame-conteudo{
     font-size: 14pt;
 }
+
+#jogo{
+    margin-top:40px;
+    padding-top:30px;
+    padding-bottom:30px;
+}
+#tabuleiro{
+    background-color: rgb(177, 177, 177);
+    padding:2px !important;
+}
+.quadrado{
+    background-color: red;
+    width: calc(100%/4 - 4px);
+    padding-top:15%;
+    float:left;
+    margin: 2px;
+    border-radius:3px;
+}
+.numeros{
+    font-weight: 500;
+    color:white;    
+    font-size:20pt;
+    text-align: center;
+}
